--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     .loading-bar-container {
       width: 80%;
-      height: 10px;
+      height: 80px;
       margin: 20px auto;
       border-radius: 5px;
       overflow: hidden;
@@ -70,24 +70,18 @@
     .loading-bar {
       width: 0;
       height: 100%;
-      background-color: #0edda5;
-      transition: width 10s linear;
+      transition: width 0.1s linear; /* Syncs with JavaScript */
     }
 
     #rocket {
       position: absolute;
       top: -20px;
       left: 0;
-      font-size: 5em;
-      transition: transform 1s ease-in-out, left 10s linear;
+      font-size: 4em;
+      transition: left 0.1s linear; /* Syncs with JavaScript */
     }
 
-    .fly-out {
-      transform: translateY(-150px) scale(1.5);
-      opacity: 0;
-    }
-
-    a {
+    a, button {
       background-color: #ffffff;
       color: #203d65;
       padding: 10px 20px;
@@ -97,9 +91,11 @@
       display: inline-block;
       margin: 20px auto;
       text-align: center;
+      border: none;
+      cursor: pointer;
     }
 
-    a:hover {
+    a:hover, button:hover {
       background-color: #e6e6e6;
     }
   </style>
@@ -114,7 +110,7 @@
   <!-- Cooking Screen -->
   <div id="process-container">
     <h1>We’re Cooking Your Image! 🍳</h1>
-    <div class="loading">Your image is on the way! Hang tight 🚀</div>
+    <div class="loading">Your image is on the way! Hang tight ☀️</div>
     <div class="loading-bar-container" id="loading-bar-container">
       <div class="loading-bar" id="loading-bar"></div>
       <div id="rocket">🚀</div>
@@ -126,6 +122,7 @@
     <img id="generated-image" />
     <br />
     <a id="download-link" href="#" target="_blank">View Full Image</a>
+    <button id="new-image">Generate a New One</button>
   </div>
 
   <script>
@@ -135,69 +132,94 @@
       const imageContainer = document.getElementById("image-container");
       const typeformEmbed = document.querySelector('[data-tf-live]');
       const jsonUrl = "https://raw.githubusercontent.com/maxcoutaz/ai-layer-generation/main/data.json";
+      const loadingBar = document.getElementById("loading-bar");
+      const rocket = document.getElementById("rocket");
+      const newImageButton = document.getElementById("new-image");
+      let loadingInterval; // Declare loading interval variable
 
-      // Get UUID from localStorage
-      let uuid = localStorage.getItem("uuid");
-
-      if (!uuid) {
-        // No UUID, generate a new one
-        uuid = crypto.randomUUID();
-        localStorage.setItem("uuid", uuid);
-
-        // Pass UUID as a hidden field to Typeform
-        typeformEmbed.setAttribute("data-tf-hidden", `uuid=${uuid}`);
-        typeformContainer.style.display = "block";
-
-        // Listen for Typeform submission event
-        window.addEventListener("message", function (event) {
-          if (event.data?.type === "formSubmit") {
-            // Hide Typeform and reload the page
-            typeformContainer.style.display = "none";
-            location.reload();
-          }
-        });
-      } else {
-        // UUID exists, bypass Typeform and show cooking screen
-        typeformContainer.style.display = "none";
-        processContainer.style.display = "block";
-
-        // Simulate loading bar
-        const loadingBar = document.getElementById("loading-bar");
-        const rocket = document.getElementById("rocket");
+      // Start the loading bar animation
+      function startLoadingBar() {
         let progress = 0;
-        const interval = setInterval(() => {
+
+        // Clear any existing interval to prevent overlap
+        if (loadingInterval) clearInterval(loadingInterval);
+
+        // Start the loading animation
+        loadingInterval = setInterval(() => {
           if (progress < 100) {
-            progress += 1;
+            progress += 1; // Increment progress
             loadingBar.style.width = `${progress}%`;
             rocket.style.left = `${progress}%`;
           } else {
-            clearInterval(interval);
+            // Reset progress immediately after reaching 100%
+            progress = 0;
+            loadingBar.style.width = "0%";
+            rocket.style.left = "0%";
           }
-        }, 100);
-
-        // Poll for image data
-        const fetchInterval = setInterval(() => {
-          fetch(jsonUrl)
-            .then((response) => response.json())
-            .then((data) => {
-              const record = data[`export_${uuid}`];
-              if (record && record.status === "ready") {
-                clearInterval(fetchInterval);
-
-                // Stop animation and show image
-                clearInterval(interval);
-                processContainer.style.display = "none";
-                imageContainer.style.display = "flex";
-
-                const image = document.getElementById("generated-image");
-                const downloadLink = document.getElementById("download-link");
-                image.src = record.image_url;
-                downloadLink.href = record.image_url;
-              }
-            })
-            .catch(console.error);
-        }, 3000);
+        }, 100); // Update every 100ms for smooth animation
       }
+
+      // Check the status of the UUID
+      function checkStatus() {
+        fetch(jsonUrl)
+          .then((response) => response.json())
+          .then((data) => {
+            const record = data[`export_${uuid}`];
+            if (record && record.status === "ready") {
+              // Stop the loading bar animation
+              clearInterval(loadingInterval);
+
+              // Show the image
+              processContainer.style.display = "none";
+              typeformContainer.style.display = "none";
+              imageContainer.style.display = "flex";
+
+              const image = document.getElementById("generated-image");
+              const downloadLink = document.getElementById("download-link");
+              image.src = record.image_url;
+              downloadLink.href = record.image_url;
+            } else {
+              // Show cooking screen if image is not ready
+              typeformContainer.style.display = "none";
+              processContainer.style.display = "block";
+
+              // Restart the loading bar
+              startLoadingBar();
+              setTimeout(checkStatus, 10000); // Poll again after 10 seconds
+            }
+          })
+          .catch(console.error);
+      }
+
+      // Generate or retrieve UUID
+      let uuid = localStorage.getItem("uuid");
+      if (!uuid) {
+        uuid = crypto.randomUUID();
+        localStorage.setItem("uuid", uuid);
+        typeformContainer.style.display = "block"; // First load, show Typeform
+      } else {
+        checkStatus(); // If UUID exists, check its status
+      }
+
+      // Attach UUID to Typeform hidden field
+      typeformEmbed.setAttribute("data-tf-hidden", `uuid=${uuid}`);
+      console.log("UUID added to Typeform:", uuid);
+
+      // Handle Typeform submission
+      window.addEventListener("message", function (event) {
+        if (event.data?.type === "form-submit") {
+          console.log("Form submission detected. Transitioning to cooking screen.");
+          typeformContainer.style.display = "none";
+          processContainer.style.display = "block";
+          checkStatus();
+        }
+      });
+
+      // Handle "Generate a New One" button
+      newImageButton.addEventListener("click", () => {
+        localStorage.removeItem("uuid");
+        window.location.reload();
+      });
     });
   </script>
 </body>
