--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
     a, button {
       background-color: #ffffff;
+      font-family: 'Oswald', sans-serif;
       color: #203d65;
       padding: 10px 20px;
       border-radius: 12px;
